--- a/.github/ISSUE_TEMPLATE/새-이슈-등록.md
+++ b/.github/ISSUE_TEMPLATE/새-이슈-등록.md
@@ -7,14 +7,15 @@ assignees: ''
 
 ---
 
-## 📝 작업 내용
-<!-- 작업한 내용을 모두 작성해 주세요. -->
-- 
-- 
+## 💡 기능 설명
+<!-- 관련 이슈에 대해 설명해주세요. -->
 
-## #️⃣ 연관 이슈
-<!-- 연관된 이슈를 태그해 주세요. -->
-close #이슈 번호
+## 🌿 할 일
+<!-- 해야 할 일들을 적어주세요. -->
 
-## 👀 스크린샷
-<!-- 결과 이미지를 첨부해 주세요. -->
+- [ ]  
+- [ ]  
+
+## ⏱️ 마감 기한
+<!-- 언제까지 완성해야 하는 지 정해주세요. -->
+2025-08-00 (월)
